[Nimesh/Lokesh] #81 Fixed header subtile positioning, article description alignment on home-page

--- a/core/static/css/v2/main.less
+++ b/core/static/css/v2/main.less
@@ -25,7 +25,18 @@
    }
   }
 }
+#mainnav .navbar-header {
+  .header-title-wrapper {
+    display: inline-block;
+  }
+}
 
+
+@media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+  .nav-header-icon-title {
+    padding-right: 0px;
+  }
+}
 @media only screen and (max-width: 768px) {
   .album-list, .single-category, .Visible, .PhotoZone, .Little, .VideoZone, .AudioZone, .Tongues, .gallery-home,
   .face-list, .resource-list, .about-the-editor, .authors {
